<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="25sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/programText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:text="@string/program_title"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/programSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:spinnerMode="dropdown"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/difficultyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/difficulty_title"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <SeekBar
            android:id="@+id/difficultlyBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:max="10"
            android:progress="3"
            android:progressTint="#0012E3EB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40sp">

            <TextView
                android:id="@+id/speedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/starting_speed_title"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/speedVariable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed_hint"
                android:textSize="22sp" />

        </LinearLayout>

        <Switch
            android:id="@+id/trackSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/save_track_title"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40sp">

            <TextView
                android:id="@+id/trackNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track_name_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/enteredNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/track_name_hint"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onStartRunningClick"
            android:text="@string/start_running_btn"
            android:textSize="22sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
